dev/image-registry/templates/registry2/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  type: NodePort  # or LoadBalancer/ClusterIP depending on your needs
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32000  # accessible at <node-ip>:32000
  selector:
    app: registry
